[package]
name = "kmrf"
version = "0.1.0"
authors = ["Pierre Marijon <pierre.marijon@hhu.de>"]
edition = "2021"

[lib]
name = "kmrf"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "kmrf"
path = "src/main.rs"

[dependencies]
noodles        = { version = "0.18", features = ["fasta"] }
cocktail       = { git = "https://github.com/natir/cocktail.git" }
pcon	       = { git = "https://github.com/natir/pcon.git" }

# parallel
rayon           = "1"

# input output management
niffler	       = { version = "2", features = ["bz2", "lzma", "gz"] }

# CLI management
clap           = "3"

# Logging and error management
log 	       = "0.4"
anyhow         = "1"
thiserror      = "1"
env_logger     = "0.9"

[profile.release]
#debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false